# bateman

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-test.yaml
src/: ast.hpp  codegen.cpp  globals.hpp  lexer.l  main.cpp  parser.y  runtime.cpp  shared_headers.hpp
test/: dorsia.bateman  input.bateman
